// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationsInfosPage || LogoInput from computer should render upload modal with from computer tab 1`] = `
<body
  class="lock-body-scroll"
>
  .c22 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c6 {
  background: #f6f6f9;
  padding: 8px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
}

.c7 {
  position: relative;
}

.c9 {
  padding-right: 8px;
  padding-left: 8px;
  overflow: hidden;
  width: 100%;
}

.c11 {
  height: 124px;
}

.c14 {
  max-width: 40%;
  max-height: 40%;
}

.c15 {
  position: absolute;
  bottom: 4px;
  width: 100%;
}

.c19 {
  padding-top: 8px;
  padding-right: 16px;
  padding-left: 16px;
}

.c4 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c20 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c21 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: grid;
  grid-template-columns: auto 1fr auto;
  grid-template-areas: 'startAction slides endAction';
}

.c10 {
  grid-area: slides;
}

.c2 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c2 > * + * {
  margin-top: 4px;
}

.c16 > * {
  margin-left: 0;
  margin-right: 0;
}

.c16 > * + * {
  margin-left: 4px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c17 svg {
  height: 12px;
  width: 12px;
}

.c17 svg > g,
.c17 svg path {
  fill: #ffffff;
}

.c17[aria-disabled='true'] {
  pointer-events: none;
}

.c17:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c17:focus-visible {
  outline: none;
}

.c17:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c18 svg > g,
.c18 svg path {
  fill: #8e8ea9;
}

.c18:hover svg > g,
.c18:hover svg path {
  fill: #666687;
}

.c18:active svg > g,
.c18:active svg path {
  fill: #a5a5ba;
}

.c18[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c18[aria-disabled='true'] svg path {
  fill: #666687;
}

.c23 .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 .c3 {
  color: #ffffff;
}

.c23[aria-disabled='true'] .c3 {
  color: #666687;
}

.c23[aria-disabled='true']:active .c3 {
  color: #666687;
}

.c24 .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 .c3 {
  color: #ffffff;
}

.c24[aria-disabled='true'] .c3 {
  color: #666687;
}

.c24[aria-disabled='true']:active .c3 {
  color: #666687;
}

.c24 .c3 {
  color: #32324d;
}

<div>
    <div>
      <div
        class="c0 c1 c2"
        spacing="1"
      >
        <label
          class="c3 c4"
          for="carouselinput-6"
        >
          <div
            class="c0 c5"
          >
            Logo
          </div>
        </label>
        <div
          class="c0 "
          id="carouselinput-6"
        >
          <div
            class="c0 c6"
          >
            <section
              aria-label="Logo"
              aria-roledescription="carousel"
              class="c0 c7 c8"
            >
              <div
                aria-live="polite"
                class="c0 c9 c10"
                overflow="hidden"
                width="100%"
              >
                <div
                  aria-label="Logo slide"
                  aria-roledescription="slide"
                  class="c0 c11 c12 c13"
                  height="124px"
                  role="group"
                >
                  <img
                    alt="Logo"
                    class="c0 c14"
                    src="/admin/defaultLogo.png"
                  />
                </div>
              </div>
              <div
                class="c0 c15 c12 c16"
                spacing="1"
                width="100%"
              >
                <span>
                  <button
                    aria-disabled="false"
                    aria-labelledby="tooltip-7"
                    class="c17 c18"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24 13.604a.3.3 0 01-.3.3h-9.795V23.7a.3.3 0 01-.3.3h-3.21a.3.3 0 01-.3-.3v-9.795H.3a.3.3 0 01-.3-.3v-3.21a.3.3 0 01.3-.3h9.795V.3a.3.3 0 01.3-.3h3.21a.3.3 0 01.3.3v9.795H23.7a.3.3 0 01.3.3v3.21z"
                        fill="#212134"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </section>
            <div
              class="c0 c19"
            >
              <span>
                <div
                  aria-labelledby="tooltip-9"
                  class="c0 c12"
                  tabindex="0"
                >
                  <span
                    class="c3 c20"
                  >
                    logo.png
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <p
          class="c3 c21"
          id="carouselinput-6-hint"
        >
          Change the admin panel logo (Max dimension: 750x750, Max file size: 100KB)
        </p>
      </div>
    </div>
    <div
      class="c22"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  .c1 {
  background: #212134;
  padding: 8px;
  border-radius: 4px;
}

.c4 {
  font-weight: 600;
  color: #ffffff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c2 {
  position: absolute;
  z-index: 4;
  display: none;
}

.c5 .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .c3 {
  color: #ffffff;
}

.c5[aria-disabled='true'] .c3 {
  color: #666687;
}

.c5[aria-disabled='true']:active .c3 {
  color: #666687;
}

.c6 .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c3 {
  color: #ffffff;
}

.c6[aria-disabled='true'] .c3 {
  color: #666687;
}

.c6[aria-disabled='true']:active .c3 {
  color: #666687;
}

.c6 .c3 {
  color: #32324d;
}

<div
    data-react-portal="true"
  >
    <div
      class="c0 c1 c2"
      id="tooltip-7"
      role="tooltip"
    >
      <p
        class="c3 c4"
      >
        Change logo
      </p>
    </div>
  </div>
  .c1 {
  background: #212134;
  padding: 8px;
  border-radius: 4px;
}

.c4 {
  font-weight: 600;
  color: #ffffff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c2 {
  position: absolute;
  z-index: 4;
  display: none;
}

.c5 .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .c3 {
  color: #ffffff;
}

.c5[aria-disabled='true'] .c3 {
  color: #666687;
}

.c5[aria-disabled='true']:active .c3 {
  color: #666687;
}

.c6 .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c3 {
  color: #ffffff;
}

.c6[aria-disabled='true'] .c3 {
  color: #666687;
}

.c6[aria-disabled='true']:active .c3 {
  color: #666687;
}

.c6 .c3 {
  color: #32324d;
}

<div
    data-react-portal="true"
  >
    <div
      class="c0 c1 c2"
      id="tooltip-9"
      role="tooltip"
    >
      <p
        class="c3 c4"
      >
        logo.png
      </p>
    </div>
  </div>
  .c2 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c4 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c11 {
  padding-right: 40px;
  padding-left: 40px;
}

.c13 {
  padding: 16px;
}

.c18 {
  background: #eaeaef;
}

.c20 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c23 {
  background: #f6f6f9;
  padding-top: 48px;
  padding-bottom: 32px;
  border-radius: 4px;
  border-style: dashed;
  border-width: 1px;
  border-color: #c0c0cf;
  position: relative;
}

.c25 {
  color: #4945ff;
  width: 3.75rem;
  height: 3.75rem;
}

.c27 {
  padding-top: 12px;
  padding-bottom: 20px;
}

.c32 {
  padding-top: 24px;
}

.c26 path {
  fill: #4945ff;
}

.c31 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c33 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c8 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c15 {
  color: #4945ff;
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c17 {
  color: #666687;
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c28 {
  color: #32324d;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
}

.c21 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c35 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c24 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c22 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c22 > * + * {
  margin-top: 8px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c9 svg {
  height: 12px;
  width: 12px;
}

.c9 svg > g,
.c9 svg path {
  fill: #ffffff;
}

.c9[aria-disabled='true'] {
  pointer-events: none;
}

.c9:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c9:focus-visible {
  outline: none;
}

.c9:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c10 svg > g,
.c10 svg path {
  fill: #8e8ea9;
}

.c10:hover svg > g,
.c10:hover svg path {
  fill: #666687;
}

.c10:active svg > g,
.c10:active svg path {
  fill: #a5a5ba;
}

.c10[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c10[aria-disabled='true'] svg path {
  fill: #666687;
}

.c0 {
  position: fixed;
  z-index: 4;
  inset: 0;
  background: #32324d1F;
  padding: 0 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  width: 51.875rem;
}

.c5 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c34 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c36 > * + * {
  margin-left: 8px;
}

.c14 {
  border-bottom: 2px solid #4945ff;
}

.c16 {
  border-bottom: 2px solid transparent;
}

.c12[aria-disabled='true'] {
  cursor: not-allowed;
}

.c19 {
  height: 1px;
  border: none;
  margin: 0;
}

.c30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c30 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c30 .c7 {
  color: #ffffff;
}

.c30[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c30[aria-disabled='true'] .c7 {
  color: #666687;
}

.c30[aria-disabled='true'] svg > g,
.c30[aria-disabled='true'] svg path {
  fill: #666687;
}

.c30[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c30[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c30[aria-disabled='true']:active svg > g,
.c30[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c30:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c30:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c30 svg > g,
.c30 svg path {
  fill: #ffffff;
}

.c37 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c37 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c37 .c7 {
  color: #ffffff;
}

.c37[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c37[aria-disabled='true'] .c7 {
  color: #666687;
}

.c37[aria-disabled='true'] svg > g,
.c37[aria-disabled='true'] svg path {
  fill: #666687;
}

.c37[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c37[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c37[aria-disabled='true']:active svg > g,
.c37[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c37:hover {
  background-color: #f6f6f9;
}

.c37:active {
  background-color: #eaeaef;
}

.c37 .c7 {
  color: #32324d;
}

.c37 svg > g,
.c37 svg path {
  fill: #32324d;
}

.c29 {
  opacity: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
}

<div
    data-react-portal="true"
  >
    <div
      class="c0"
    >
      <div>
        <div>
          <div
            aria-labelledby="modal"
            aria-modal="true"
            class="c1 c2 c3"
            role="dialog"
          >
            <div
              class="c1 c4 c5"
            >
              <div
                class="c1 c6"
              >
                <h2
                  class="c7 c8"
                  id="modal"
                >
                  Upload logo
                </h2>
                <button
                  aria-disabled="false"
                  aria-label="Close the modal"
                  class="c9 c10"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 2.417L21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div>
              <div
                class="c1 c11"
              >
                <div
                  aria-label="How do you want to upload your assets?"
                  role="tablist"
                >
                  <button
                    aria-controls="tabgroup-16-0-tabpanel"
                    aria-disabled="false"
                    aria-selected="true"
                    class="c12"
                    id="tabgroup-16-0-tab"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c1 c13 c14"
                    >
                      <span
                        class="c7 c15"
                      >
                        From computer
                      </span>
                    </div>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-selected="false"
                    class="c12"
                    id="tabgroup-16-1-tab"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="c1 c13 c16"
                    >
                      <span
                        class="c7 c17"
                      >
                        From url
                      </span>
                    </div>
                  </button>
                </div>
                <hr
                  class="c1 c18 c19"
                />
              </div>
              <div>
                <div
                  aria-labelledby="tabgroup-16-0-tab"
                  id="tabgroup-16-0-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <form>
                    <div
                      class="c1 c20"
                    >
                      <div>
                        <label
                          for="logo-upload"
                        >
                          <div
                            class="c1 c21 c22"
                            spacing="2"
                          >
                            <div
                              class="c1 c23 c24"
                            >
                              <svg
                                aria-hidden="true"
                                class="c1 c25 c26"
                                fill="none"
                                height="3.75rem"
                                viewBox="0 0 24 20"
                                width="3.75rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M21.569 2.398H7.829v1.586h13.74c.47 0 .826.5.826 1.094v9.853l-2.791-3.17a2.13 2.13 0 00-.74-.55 2.214 2.214 0 00-.912-.196 2.215 2.215 0 00-.912.191 2.131 2.131 0 00-.74.546l-2.93 3.385-2.973-3.36a2.147 2.147 0 00-.741-.545 2.228 2.228 0 00-1.824.007c-.286.13-.538.319-.739.553l-2.931 3.432V7.653H2.51v9.894c.023.153.06.304.108.452v.127l.041.095c.057.142.126.28.207.412l.099.15c.074.107.157.207.247.302l.124.119c.13.118.275.222.43.309h.024c.36.214.775.327 1.198.325h16.515c.36-.004.716-.085 1.039-.24.323-.153.606-.375.827-.648a2.78 2.78 0 00.504-.888c.066-.217.108-.44.124-.666V5.078a2.497 2.497 0 00-.652-1.81 2.706 2.706 0 00-1.776-.87z"
                                  fill="#32324D"
                                />
                                <path
                                  d="M12.552 9.199c.912 0 1.651-.71 1.651-1.585 0-.876-.74-1.586-1.651-1.586-.912 0-1.652.71-1.652 1.586 0 .875.74 1.585 1.652 1.585zM3.303 6.408h.826V3.997h2.477v-.793-.793H4.129V0h-.826c-.219 0-.85.002-.826 0v2.411H0v1.586h2.477v2.41h.826z"
                                  fill="#32324D"
                                />
                              </svg>
                              <div
                                class="c1 c27"
                              >
                                <span
                                  class="c7 c28"
                                >
                                  Drag and Drop here or
                                </span>
                              </div>
                              <input
                                accept="image/jpeg,image/png,image/svg+xml"
                                class="c29"
                                cursor="pointer"
                                id="logo-upload"
                                name="files"
                                tabindex="-1"
                                type="file"
                              />
                              <button
                                aria-disabled="false"
                                class="c9 c30"
                                type="button"
                              >
                                <span
                                  class="c7 c31"
                                >
                                  Browse files
                                </span>
                              </button>
                              <div
                                class="c1 c32"
                              >
                                <span
                                  class="c7 c33"
                                >
                                  Max dimension: 750x750, Max size: 100KB
                                </span>
                              </div>
                            </div>
                          </div>
                        </label>
                      </div>
                    </div>
                  </form>
                  <div
                    class="c1 c4 c34"
                  >
                    <div
                      class="c1 c6"
                    >
                      <div
                        class="c1 c35 c36"
                      >
                        <button
                          aria-disabled="false"
                          class="c9 c37"
                          type="button"
                        >
                          <span
                            class="c7 c31"
                          >
                            Cancel
                          </span>
                        </button>
                      </div>
                      <div
                        class="c1 c35 c36"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ApplicationsInfosPage || LogoInput from url should render upload modal with from url tab 1`] = `
<body
  class="lock-body-scroll"
>
  .c22 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c6 {
  background: #f6f6f9;
  padding: 8px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
}

.c7 {
  position: relative;
}

.c9 {
  padding-right: 8px;
  padding-left: 8px;
  overflow: hidden;
  width: 100%;
}

.c11 {
  height: 124px;
}

.c14 {
  max-width: 40%;
  max-height: 40%;
}

.c15 {
  position: absolute;
  bottom: 4px;
  width: 100%;
}

.c19 {
  padding-top: 8px;
  padding-right: 16px;
  padding-left: 16px;
}

.c4 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c20 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c21 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  display: grid;
  grid-template-columns: auto 1fr auto;
  grid-template-areas: 'startAction slides endAction';
}

.c10 {
  grid-area: slides;
}

.c2 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c2 > * + * {
  margin-top: 4px;
}

.c16 > * {
  margin-left: 0;
  margin-right: 0;
}

.c16 > * + * {
  margin-left: 4px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c17 svg {
  height: 12px;
  width: 12px;
}

.c17 svg > g,
.c17 svg path {
  fill: #ffffff;
}

.c17[aria-disabled='true'] {
  pointer-events: none;
}

.c17:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c17:focus-visible {
  outline: none;
}

.c17:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c18 svg > g,
.c18 svg path {
  fill: #8e8ea9;
}

.c18:hover svg > g,
.c18:hover svg path {
  fill: #666687;
}

.c18:active svg > g,
.c18:active svg path {
  fill: #a5a5ba;
}

.c18[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c18[aria-disabled='true'] svg path {
  fill: #666687;
}

.c23 .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 .c3 {
  color: #ffffff;
}

.c23[aria-disabled='true'] .c3 {
  color: #666687;
}

.c23[aria-disabled='true']:active .c3 {
  color: #666687;
}

.c24 .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 .c3 {
  color: #ffffff;
}

.c24[aria-disabled='true'] .c3 {
  color: #666687;
}

.c24[aria-disabled='true']:active .c3 {
  color: #666687;
}

.c24 .c3 {
  color: #32324d;
}

<div>
    <div>
      <div
        class="c0 c1 c2"
        spacing="1"
      >
        <label
          class="c3 c4"
          for="carouselinput-104"
        >
          <div
            class="c0 c5"
          >
            Logo
          </div>
        </label>
        <div
          class="c0 "
          id="carouselinput-104"
        >
          <div
            class="c0 c6"
          >
            <section
              aria-label="Logo"
              aria-roledescription="carousel"
              class="c0 c7 c8"
            >
              <div
                aria-live="polite"
                class="c0 c9 c10"
                overflow="hidden"
                width="100%"
              >
                <div
                  aria-label="Logo slide"
                  aria-roledescription="slide"
                  class="c0 c11 c12 c13"
                  height="124px"
                  role="group"
                >
                  <img
                    alt="Logo"
                    class="c0 c14"
                    src="/admin/defaultLogo.png"
                  />
                </div>
              </div>
              <div
                class="c0 c15 c12 c16"
                spacing="1"
                width="100%"
              >
                <span>
                  <button
                    aria-disabled="false"
                    aria-labelledby="tooltip-105"
                    class="c17 c18"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24 13.604a.3.3 0 01-.3.3h-9.795V23.7a.3.3 0 01-.3.3h-3.21a.3.3 0 01-.3-.3v-9.795H.3a.3.3 0 01-.3-.3v-3.21a.3.3 0 01.3-.3h9.795V.3a.3.3 0 01.3-.3h3.21a.3.3 0 01.3.3v9.795H23.7a.3.3 0 01.3.3v3.21z"
                        fill="#212134"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </section>
            <div
              class="c0 c19"
            >
              <span>
                <div
                  aria-labelledby="tooltip-107"
                  class="c0 c12"
                  tabindex="0"
                >
                  <span
                    class="c3 c20"
                  >
                    logo.png
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <p
          class="c3 c21"
          id="carouselinput-104-hint"
        >
          Change the admin panel logo (Max dimension: 750x750, Max file size: 100KB)
        </p>
      </div>
    </div>
    <div
      class="c22"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  .c1 {
  background: #212134;
  padding: 8px;
  border-radius: 4px;
}

.c4 {
  font-weight: 600;
  color: #ffffff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c2 {
  position: absolute;
  z-index: 4;
  display: none;
}

.c5 .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .c3 {
  color: #ffffff;
}

.c5[aria-disabled='true'] .c3 {
  color: #666687;
}

.c5[aria-disabled='true']:active .c3 {
  color: #666687;
}

.c6 .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c3 {
  color: #ffffff;
}

.c6[aria-disabled='true'] .c3 {
  color: #666687;
}

.c6[aria-disabled='true']:active .c3 {
  color: #666687;
}

.c6 .c3 {
  color: #32324d;
}

<div
    data-react-portal="true"
  >
    <div
      class="c0 c1 c2"
      id="tooltip-105"
      role="tooltip"
    >
      <p
        class="c3 c4"
      >
        Change logo
      </p>
    </div>
  </div>
  .c1 {
  background: #212134;
  padding: 8px;
  border-radius: 4px;
}

.c4 {
  font-weight: 600;
  color: #ffffff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c2 {
  position: absolute;
  z-index: 4;
  display: none;
}

.c5 .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .c3 {
  color: #ffffff;
}

.c5[aria-disabled='true'] .c3 {
  color: #666687;
}

.c5[aria-disabled='true']:active .c3 {
  color: #666687;
}

.c6 .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c3 {
  color: #ffffff;
}

.c6[aria-disabled='true'] .c3 {
  color: #666687;
}

.c6[aria-disabled='true']:active .c3 {
  color: #666687;
}

.c6 .c3 {
  color: #32324d;
}

<div
    data-react-portal="true"
  >
    <div
      class="c0 c1 c2"
      id="tooltip-107"
      role="tooltip"
    >
      <p
        class="c3 c4"
      >
        logo.png
      </p>
    </div>
  </div>
  .c2 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c4 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c11 {
  padding-right: 40px;
  padding-left: 40px;
}

.c13 {
  padding: 16px;
}

.c18 {
  background: #eaeaef;
}

.c20 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c23 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c8 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.875rem;
  line-height: 1.43;
}

.c17 {
  color: #4945ff;
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c15 {
  color: #666687;
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c21 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c24 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c26 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c26::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c26::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c26:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c26::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c26[aria-disabled='true'] {
  color: inherit;
}

.c26:focus {
  outline: none;
  box-shadow: none;
}

.c25 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c25:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c22 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c22 > * + * {
  margin-top: 4px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c9 svg {
  height: 12px;
  width: 12px;
}

.c9 svg > g,
.c9 svg path {
  fill: #ffffff;
}

.c9[aria-disabled='true'] {
  pointer-events: none;
}

.c9:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c9:focus-visible {
  outline: none;
}

.c9:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c10 svg > g,
.c10 svg path {
  fill: #8e8ea9;
}

.c10:hover svg > g,
.c10:hover svg path {
  fill: #666687;
}

.c10:active svg > g,
.c10:active svg path {
  fill: #a5a5ba;
}

.c10[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c10[aria-disabled='true'] svg path {
  fill: #666687;
}

.c0 {
  position: fixed;
  z-index: 4;
  inset: 0;
  background: #32324d1F;
  padding: 0 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  width: 51.875rem;
}

.c5 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c27 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c28 > * + * {
  margin-left: 8px;
}

.c16 {
  border-bottom: 2px solid #4945ff;
}

.c14 {
  border-bottom: 2px solid transparent;
}

.c12[aria-disabled='true'] {
  cursor: not-allowed;
}

.c19 {
  height: 1px;
  border: none;
  margin: 0;
}

.c30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
}

.c30 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c30 .c7 {
  color: #ffffff;
}

.c30[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c30[aria-disabled='true'] .c7 {
  color: #666687;
}

.c30[aria-disabled='true'] svg > g,
.c30[aria-disabled='true'] svg path {
  fill: #666687;
}

.c30[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c30[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c30[aria-disabled='true']:active svg > g,
.c30[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c30:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c30:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c30 svg > g,
.c30 svg path {
  fill: #ffffff;
}

.c29 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c29 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c29 .c7 {
  color: #ffffff;
}

.c29[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c29[aria-disabled='true'] .c7 {
  color: #666687;
}

.c29[aria-disabled='true'] svg > g,
.c29[aria-disabled='true'] svg path {
  fill: #666687;
}

.c29[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c29[aria-disabled='true']:active .c7 {
  color: #666687;
}

.c29[aria-disabled='true']:active svg > g,
.c29[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c29:hover {
  background-color: #f6f6f9;
}

.c29:active {
  background-color: #eaeaef;
}

.c29 .c7 {
  color: #32324d;
}

.c29 svg > g,
.c29 svg path {
  fill: #32324d;
}

<div
    data-react-portal="true"
  >
    <div
      class="c0"
    >
      <div>
        <div>
          <div
            aria-labelledby="modal"
            aria-modal="true"
            class="c1 c2 c3"
            role="dialog"
          >
            <div
              class="c1 c4 c5"
            >
              <div
                class="c1 c6"
              >
                <h2
                  class="c7 c8"
                  id="modal"
                >
                  Upload logo
                </h2>
                <button
                  aria-disabled="false"
                  aria-label="Close the modal"
                  class="c9 c10"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 2.417L21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div>
              <div
                class="c1 c11"
              >
                <div
                  aria-label="How do you want to upload your assets?"
                  role="tablist"
                >
                  <button
                    aria-disabled="false"
                    aria-selected="false"
                    class="c12"
                    id="tabgroup-114-0-tab"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="c1 c13 c14"
                    >
                      <span
                        class="c7 c15"
                      >
                        From computer
                      </span>
                    </div>
                  </button>
                  <button
                    aria-controls="tabgroup-114-1-tabpanel"
                    aria-disabled="false"
                    aria-selected="true"
                    class="c12"
                    id="tabgroup-114-1-tab"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c1 c13 c16"
                    >
                      <span
                        class="c7 c17"
                      >
                        From url
                      </span>
                    </div>
                  </button>
                </div>
                <hr
                  class="c1 c18 c19"
                />
              </div>
              <div>
                <div
                  aria-labelledby="tabgroup-114-1-tab"
                  id="tabgroup-114-1-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <form>
                    <div
                      class="c1 c20"
                    >
                      <div>
                        <div>
                          <div
                            class="c1 c21 c22"
                            spacing="1"
                          >
                            <label
                              class="c7 c23"
                              for="textinput-117"
                            >
                              <div
                                class="c1 c24"
                              >
                                URL
                              </div>
                            </label>
                            <div
                              class="c1 c6 c25"
                            >
                              <input
                                aria-disabled="false"
                                aria-invalid="false"
                                class="c26"
                                id="textinput-117"
                                name="logo-url"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c1 c4 c27"
                    >
                      <div
                        class="c1 c6"
                      >
                        <div
                          class="c1 c24 c28"
                        >
                          <button
                            aria-disabled="false"
                            class="c9 c29"
                            type="button"
                          >
                            <span
                              class="c7 c23"
                            >
                              Cancel
                            </span>
                          </button>
                        </div>
                        <div
                          class="c1 c24 c28"
                        >
                          <button
                            aria-disabled="false"
                            class="c9 c30"
                            type="submit"
                          >
                            <span
                              class="c7 c23"
                            >
                              Next
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ApplicationsInfosPage || LogoInput logo input should match snapshot 1`] = `
.c20 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c4 {
  background: #f6f6f9;
  padding: 8px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
}

.c5 {
  position: relative;
}

.c7 {
  padding-right: 8px;
  padding-left: 8px;
  overflow: hidden;
  width: 100%;
}

.c9 {
  height: 124px;
}

.c12 {
  max-width: 40%;
  max-height: 40%;
}

.c13 {
  position: absolute;
  bottom: 4px;
  width: 100%;
}

.c17 {
  padding-top: 8px;
  padding-right: 16px;
  padding-left: 16px;
}

.c21 {
  background: #212134;
  padding: 8px;
  border-radius: 4px;
}

.c2 {
  font-weight: 600;
  color: #32324d;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c18 {
  color: #666687;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c19 {
  color: #666687;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c23 {
  font-weight: 600;
  color: #ffffff;
  font-size: 0.75rem;
  line-height: 1.33;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c22 {
  position: absolute;
  z-index: 4;
  display: none;
}

.c6 {
  display: grid;
  grid-template-columns: auto 1fr auto;
  grid-template-areas: 'startAction slides endAction';
}

.c8 {
  grid-area: slides;
}

.c1 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c1 > * + * {
  margin-top: 4px;
}

.c14 > * {
  margin-left: 0;
  margin-right: 0;
}

.c14 > * + * {
  margin-left: 4px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c15 svg {
  height: 12px;
  width: 12px;
}

.c15 svg > g,
.c15 svg path {
  fill: #ffffff;
}

.c15[aria-disabled='true'] {
  pointer-events: none;
}

.c15:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c15:focus-visible {
  outline: none;
}

.c15:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c16 svg > g,
.c16 svg path {
  fill: #8e8ea9;
}

.c16:hover svg > g,
.c16:hover svg path {
  fill: #666687;
}

.c16:active svg > g,
.c16:active svg path {
  fill: #a5a5ba;
}

.c16[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c16[aria-disabled='true'] svg path {
  fill: #666687;
}

<body>
  <div>
    <div>
      <div
        class="c0 c1"
        spacing="1"
      >
        <label
          class="c2"
          for="carouselinput-1"
        >
          <div
            class="c3"
          >
            Logo
          </div>
        </label>
        <div
          class=""
          id="carouselinput-1"
        >
          <div
            class="c4"
          >
            <section
              aria-label="Logo"
              aria-roledescription="carousel"
              class="c5 c6"
            >
              <div
                aria-live="polite"
                class="c7 c8"
                overflow="hidden"
                width="100%"
              >
                <div
                  aria-label="Logo slide"
                  aria-roledescription="slide"
                  class="c9 c10 c11"
                  height="124px"
                  role="group"
                >
                  <img
                    alt="Logo"
                    class="c12"
                    src="/admin/defaultLogo.png"
                  />
                </div>
              </div>
              <div
                class="c13 c10 c14"
                spacing="1"
                width="100%"
              >
                <span>
                  <button
                    aria-disabled="false"
                    aria-labelledby="tooltip-2"
                    class="c15 c16"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24 13.604a.3.3 0 01-.3.3h-9.795V23.7a.3.3 0 01-.3.3h-3.21a.3.3 0 01-.3-.3v-9.795H.3a.3.3 0 01-.3-.3v-3.21a.3.3 0 01.3-.3h9.795V.3a.3.3 0 01.3-.3h3.21a.3.3 0 01.3.3v9.795H23.7a.3.3 0 01.3.3v3.21z"
                        fill="#212134"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </section>
            <div
              class="c17"
            >
              <span>
                <div
                  aria-labelledby="tooltip-4"
                  class="c10"
                  tabindex="0"
                >
                  <span
                    class="c18"
                  >
                    logo.png
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <p
          class="c19"
          id="carouselinput-1-hint"
        >
          Change the admin panel logo (Max dimension: 750x750, Max file size: 100KB)
        </p>
      </div>
    </div>
    <div
      class="c20"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c21 c22"
      id="tooltip-2"
      role="tooltip"
    >
      <p
        class="c23"
      >
        Change logo
      </p>
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c21 c22"
      id="tooltip-4"
      role="tooltip"
    >
      <p
        class="c23"
      >
        logo.png
      </p>
    </div>
  </div>
</body>
`;
